--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   company: Ableton AG
   description: Determines path elements for system package managers
   license: MIT
-  min_ansible_version: 2.10
+  min_ansible_version: "2.10"
   role_name: pkg_mgr_path
 
   platforms:
