--- a/tasks/set-path-apt.yml
+++ b/tasks/set-path-apt.yml
@@ -1,12 +1,12 @@
 ---
 - name: Set ansible_pkg_mgr_prefix fact
-  set_fact:
+  ansible.builtin.set_fact:
     ansible_pkg_mgr_prefix: "/usr"
 
 - name: Set ansible_pkg_mgr_bin fact
-  set_fact:
+  ansible.builtin.set_fact:
     ansible_pkg_mgr_bin: "{{ ansible_pkg_mgr_prefix }}/bin"
 
 - name: Set ansible_pkg_mgr_path fact
-  set_fact:
+  ansible.builtin.set_fact:
     ansible_pkg_mgr_path: "{{ ansible_env.PATH }}"
