--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Write variables to file
       copy:
-        content: |-
+        content: |
           {{ ansible_pkg_mgr_bin }}
           {{ ansible_pkg_mgr_path }}
           {{ ansible_pkg_mgr_prefix }}
