--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,7 +2,7 @@
 - name: Converge
   hosts: all
   roles:
-    - ansible-role-pkg-mgr-path
+    - ableton.pkg_mgr_path
   tasks:
     - name: Write variables to file
       copy:
